Pair programmed with @MarcyNash and @rothenbg Add toggle display to sign in and sign out ui functions. Add display none css property to sign out and change password. The purpose of the changes is to ensure that only active auth buttons are visible at any given point of the user flow.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,6 +1,14 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
+#change-password-btn {
+  display: none;
+}
+
+#sign-out-btn {
+  display: none;
+}
+
 .files-list-container {
   display: none;
 
